Progress commit complete. Pre-testing
